// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accountSingleSignOnReducer GET_ACCOUNT_SSO_DETAILS_FAIL 1`] = `
Object {
  "error": "Oh Snap!",
  "loading": false,
}
`;

exports[`accountSingleSignOnReducer GET_ACCOUNT_SSO_DETAILS_PENDING 1`] = `
Object {
  "loading": true,
}
`;

exports[`accountSingleSignOnReducer GET_ACCOUNT_SSO_DETAILS_SUCCESS 1`] = `
Object {
  "cert": "abc==",
  "enabled": true,
  "loading": false,
  "provider": "https://sso.sparkpost.com/redirect",
  "updatedAt": "2018-09-11T19:07:17+00:00",
}
`;

exports[`accountSingleSignOnReducer PROVISION_ACCOUNT_SSO_SUCCESS 1`] = `
Object {
  "cert": "abc==",
  "enabled": true,
  "loading": false,
  "provider": "https://sso.sparkpost.com/redirect",
  "updatedAt": "2018-09-11T19:07:17+00:00",
}
`;

exports[`accountSingleSignOnReducer REPROVISION_ACCOUNT_SSO_SUCCESS 1`] = `
Object {
  "cert": "abc==",
  "enabled": true,
  "loading": false,
  "provider": "https://sso.sparkpost.com/redirect",
  "updatedAt": "2018-09-11T19:07:17+00:00",
}
`;

exports[`accountSingleSignOnReducer UPDATE_ACCOUNT_SSO_FAIL 1`] = `
Object {
  "cert": "abc==",
  "enabled": true,
  "provider": "https://sso.sparkpost.com/redirect",
  "updateError": "Oh Snap!",
  "updated_at": "2018-09-11T19:07:17+00:00",
}
`;

exports[`accountSingleSignOnReducer UPDATE_ACCOUNT_SSO_SUCCESS 1`] = `
Object {
  "cert": "abc==",
  "enabled": true,
  "loading": false,
  "provider": "https://sso.sparkpost.com/redirect",
  "updatedAt": "2018-09-11T19:07:17+00:00",
}
`;
